// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FakeLink /> with additional className matches its snapshot 1`] = `
<span
  className=
      y-fakeLink
      TEST_CLASSNAME
      {
        color: #386cbb;
        text-decoration: none;
      }
      &:hover {
        cursor: pointer;
        text-decoration: underline;
      }
      &:active, &:focus, &:hover {
        color: #264f8c;
      }
>
  test content
</span>
`;

exports[`<FakeLink /> with default options matches its snapshot 1`] = `
<span
  className=
      y-fakeLink
      {
        color: #386cbb;
        text-decoration: none;
      }
      &:hover {
        cursor: pointer;
        text-decoration: underline;
      }
      &:active, &:focus, &:hover {
        color: #264f8c;
      }
>
  link content
</span>
`;
